<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/miSettings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"
        android:onClick="onProfileAction"
        android:title="@string/profile">
    </item>

    <item
        android:id="@+id/miCompose"
        android:icon="@drawable/ic_logout"
        app:showAsAction="ifRoom"
        android:onClick="onLogoutAction"
        android:title="@string/logout">
    </item>



</menu>